add basic landing page

--- a/index.html
+++ b/index.html
@@ -3,18 +3,42 @@
 	<head>
 		<meta charset="utf-8">
 		<title>LD34</title>
-		<style>
-			body{
-				margin: 0px;
-			}
-			canvas{
-				background: green;
-				display: block;
-			}
-		</style>
 	</head>
 	<body>
-		<script src="lib/rot.min.js"></script>
-		<script src="js/bundle.js"></script>
+		<h1>Richard's Ludum Dare 34 Game</h1>
+		<p>Thanks for checking out my game! It's still a work-in-progress.</p>
+		<p>Currently, my game is a minimalistic sandbox where you grow a farming village.
+		You build houses that villagers live in, and farms that they use to grow food.
+		Villagers store food in their houses, and return home to eat when they get hungry.
+		When you build a new house, the villagers will chop down nearby trees (currently
+		dark green boxes) and use them to build the house.</p>
+
+		<p>To start the game, build one house (the first house doesn't need to be built
+		with trees, and contains a supply of starting food). I also recommend you build
+		several farms near the house, so the village has something to eat.</p>
+
+		<p>A number above the house shows how much food is stored there. If a villager
+		returns home to eat and there's no food in the house, the villager will become
+		inactive and the house's number will turn gray. He will stay that way until
+		another villager brings him some food.<p>
+		
+		<p>You can watch me make the game live <a href="https://gaming.youtube.com/channel/UCuomrq-VG4LwUV8Hb4Csyrw/live">here</a>.
+		I should be working on it most of Sunday, 12/13.</p>
+
+		<h2>Controls</h2>
+		<ul>
+			<li><b>f</b> and then click a grid square &mdash; place a farm</li>
+			<li><b>h</b> and then click a grid square &mdash; place a house</li>
+			<li><b>right click</b> and drag &mdash; scroll around the map</li>
+			<li><b>1 2 3 4</b> &mdash; adjust the game speed; you'll want to go to at least
+				speed 2 sometimes unless you really feel like taking your time (1 is "real" time, 4 is very fast)</li>
+			<li><b>F5</b> &mdash; start a new game (by refreshing the page)</li>
+		</ul>
+
+		<p>Thanks for playing! Please give me any feedback you might have (at <a href="mailto:richard@schneiderbox.net">richard@schneiderbox.net</a>
+		or whatever other mode of contact).</p>
+
+		<h1><a href="game.html">Click here to play!</a></h1>
+
 	</body>
 </html>
