--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			<li><b>f</b> and then click a grid square &mdash; place a farm</li>
 			<li><b>h</b> and then click a grid square &mdash; place a house</li>
 			<li><b>t</b> and then click a grid square &mdash; place a tree (must be planted by villager)</li>
+			<li><b>d</b> and then click a grid square &mdash; delete a farm or house</li>
 			<li><b>right click</b> and drag &mdash; scroll around the map</li>
 			<li><b>1 2 3 4</b> &mdash; adjust the game speed; you'll want to go to at least
 				speed 2 sometimes unless you really feel like taking your time (1 is "real" time, 4 is very fast)</li>
