--- a/game.html
+++ b/game.html
@@ -15,6 +15,7 @@
 	</head>
 	<body>
 		<script src="lib/rot.min.js"></script>
+		<script src="lib/howler.min.js"></script>
 		<script src="js/bundle.js"></script>
 	</body>
 </html>
