--- a/index.html
+++ b/index.html
@@ -3,44 +3,109 @@
 	<head>
 		<meta charset="utf-8">
 		<title>LD34</title>
+		<style>
+			body{
+				margin: 0px;
+			}
+			canvas{
+				background: green;
+				display: block;
+			}
+			#instructions{
+				position: absolute;
+				top: 0px;
+				left: 0px;
+				max-width: 85%;
+
+				background: #151025;
+				opacity: .9;
+				padding: 0px 20px;
+
+				color: #ccc;
+				font-family: arial;
+			}
+			#instructions *{
+				opacity: 1;
+			}
+			#instructions h1,h2{
+				color: #cfc;
+			}
+			#instructions p{
+				font-size: 16pt;
+			}
+			#instructions table{
+				margin-left: 20px;
+			}
+			#instructions td{
+				padding: 2px 5px;
+			}
+		</style>
 	</head>
 	<body>
-		<h1>Richard's Ludum Dare 34 Game</h1>
-		<p>Thanks for checking out my game! It's still a work-in-progress.</p>
-		<p>Currently, my game is a minimalistic sandbox where you grow a farming village.
-		You build houses that villagers live in, and farms that they use to grow food.
-		Villagers store food in their houses, and return home to eat when they get hungry.
-		When you build a new house, the villagers will chop down nearby trees (currently
-		dark green boxes) and use them to build the house.</p>
+		<div id="instructions">
+			<h1>Welcome to Harvestown</h1>
+			<p>Harvestown is an open-ended game about growing a small farming
+			community. There are no defined win or lose conditions. You do not
+			control your villagers directly. Instead, you place farms and houses
+			on the map, and villagers grow food on the farms and live in the
+			houses.</p>
+			
+			<p>Villagers store harvested food in their houses, and will return
+			home to eat when hungry. The number above a house indicates how
+			much food is stored there. If a villager returns home to eat
+			and finds no food in the house, he will become inactive until
+			another villager brings him some food.</p>
 
-		<p>To start the game, build one house (the first house doesn't need to be built
-		with trees, and contains a supply of starting food). I also recommend you build
-		several farms near the house, so the village has something to eat.</p>
+			<p>Get more villagers by building more houses. After you place a
+			house, villagers will chop down trees to construct the house. You
+			can also designate locations for villagers to plant new trees.</p>
 
-		<p>A number above the house shows how much food is stored there. If a villager
-		returns home to eat and there's no food in the house, the villager will become
-		inactive and the house's number will turn gray. He will stay that way until
-		another villager brings him some food.<p>
-		
-		<p>You can watch me make the game live <a href="https://gaming.youtube.com/channel/UCuomrq-VG4LwUV8Hb4Csyrw/live">here</a>.
-		I should be working on it most of Sunday, 12/13.</p>
+			<p style="font-weight: bold">To start the game, place one house.
+			The first house is built automatically and comes with a starting
+			supply of food. You should also place several farms near the house,
+			so the villager can grow something to eat.<p>
 
-		<h2>Controls</h2>
-		<ul>
-			<li><b>f</b> and then click a grid square &mdash; place a farm</li>
-			<li><b>h</b> and then click a grid square &mdash; place a house</li>
-			<li><b>t</b> and then click a grid square &mdash; place a tree (must be planted by villager)</li>
-			<li><b>d</b> and then click a grid square &mdash; delete a farm or house</li>
-			<li><b>right click</b> and drag &mdash; scroll around the map</li>
-			<li><b>1 2 3 4</b> &mdash; adjust the game speed; you'll want to go to at least
-				speed 2 sometimes unless you really feel like taking your time (1 is "real" time, 4 is very fast)</li>
-			<li><b>F5</b> &mdash; start a new game (by refreshing the page)</li>
-		</ul>
+			<h2 style="margin-bottom: 0px;">Controls</h2>
+			<table>
+				<tr>
+					<td>Place a <b>f</b>arm</td>
+					<td/><b>f</b> and click a grid square</td>
+				</tr>
+				<tr>
+					<td>Place a <b>h</b>ouse</td>
+					<td/><b>h</b> and click a grid square</td>
+				</tr>
+				<tr>
+					<td>Place a <b>t</b>ree</td>
+					<td/><b>t</b> and click a grid square</td>
+				</tr>
+				<tr>
+					<td><b>D</b>elete a farm or house</td>
+					<td/><b>d</b> and click a grid square</td>
+				</tr>
+				<tr>
+					<td>Scroll the map</td>
+					<td/>Right-click and drag</td>
+				</tr>
+				<tr>
+					<td>Adjust the game speed</td>
+					<td/><b>1 2 3 4</b> (1 is real-time, 4 is very fast)</td>
+				</tr>
+				<tr>
+					<td>Volume controls</td>
+					<td/><b>m</b> to mute, <b>-</b> and <b>+</b> to adjust up
+					and down</td>
+				</tr>
+				<tr>
+					<td><b>Show this help</b></td>
+					<td/><b>?</b></td>
+				</tr>
+			</table>
+			<h2>Press Esc to close this screen and begin!</h2>
+		</div>
 
-		<p>Thanks for playing! Please give me any feedback you might have (at <a href="mailto:richard@schneiderbox.net">richard@schneiderbox.net</a>
-		or whatever other mode of contact).</p>
-
-		<h1><a href="game.html">Click here to play!</a></h1>
-
+		<script src="lib/rot.min.js"></script>
+		<script src="lib/howler.min.js"></script>
+		<script src="js/bundle.js"></script>
 	</body>
 </html>
