--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<p style="font-weight: bold">To start the game, place one house.
 			The first house is built automatically and comes with a starting
 			supply of food. You should also place several farms near the house,
-			so the villager can grow something to eat.<p>
+			so the villager can grow more food.<p>
 
 			<h2 style="margin-bottom: 0px;">Controls</h2>
 			<table>
